# Aarogyam

./: .gitignore  CAREGIVER_PORTAL_AUDIT.md  DEPLOY_HUGGINGFACE.md  README.md  SKILLS.md  SUPERPOWER.md  agenthandover.py  credential.md  docker-compose.yml  implementation_plan.md  medadhere_backend_plan.md  medadhere_extensions_handover.py
backend/: .dockerignore  .env.docker.example  .env.example  Dockerfile  POSTMAN_API_GUIDE.md  _ws_test_run.py  agenthandover.py  all_api_endpoints.txt  check_caregiver.py  check_sessions.py  check_sessions_new.py  check_sessions_shell.py  check_user.py  debug_jti.py  debug_patient.py  debug_permission.py  docker-compose.yml  dump_urls.py  final_test.py  get_patient_ids.py  list_users.py  manage.py  medadhere_extensions_handover.py  pyproject.toml  quick_test.py  requirements.txt  start.sh  test_api.py  test_auth.py  test_endpoint.py  test_reschedule.py  test_tokens.py  test_websocket.py  tmp_fetch_results.py  tmp_fill_all.py  tmp_physical_check.py  tmp_schedule_comp2_test_patient.py  tmp_schedule_now.py  tmp_verify.py
backend/apps/abha/: apps.py  models.py  services.py  tasks.py  urls.py  (+1 more)
backend/config/: asgi.py  celery.py  celery_beat.py  urls.py  ws_routing.py  wsgi.py
backend/docker/: entrypoint.sh
backend/scratch/: test_twilio_sms.py  test_twilio_voice.py
backend/scripts/: run_api_probe.py  seed_all_data.py  seed_doctors.py  seed_permissions.py  seed_prescriptions.py
backend/seed_data/: abha_test_data.json  caregiver_permissions.json  device_id_batch_template.json  icd10_codes.json  medications.json  openfda_interactions.json  pharmacy_partners.json  subscription_plans.json  tenant_examples.json  whatsapp_templates.json
backend/shared/: decorators.py  exceptions.py  health.py  middleware.py  models.py  pagination.py  permissions.py  response.py  urls.py  views.py
backend/tests/: __init__.py  env.example  test_api_probe.py
(+383 files in other folders)
